--- a/branches/branch-QString/plugins/styles/metal/metal.vcproj
+++ b/branches/branch-QString/plugins/styles/metal/metal.vcproj
@@ -19,6 +19,7 @@
 			OutputDirectory="..\..\..\Debug"
 			IntermediateDirectory="..\$(ConfigurationName)"
 			ConfigurationType="2"
+			InheritedPropertySheets="$(SolutionDir)sim\win32\sim-default.vsprops"
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="false"
 			CharacterSet="2"
@@ -48,13 +49,13 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="$(QTDIR)\include,..\..\..\sim"
-				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;_USRDLL;metal_EXPORTS;QT_DLL;UNICODE;QT_THREAD_SUPPORT"
+				AdditionalIncludeDirectories=""
+				PreprocessorDefinitions="_DEBUG;DEBUG"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				BrowseInformation="1"
-				WarningLevel="3"
+				WarningLevel="4"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
 			/>
@@ -73,7 +74,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="$(QTDIR)\lib\$(QTLIB) $(QTDIR)\lib\qtmain.lib $(SolutionDir)$(ConfigurationName)\sim.lib imm32.lib wsock32.lib winmm.lib"
+				AdditionalDependencies="$(SolutionDir)$(ConfigurationName)\sim.lib"
 				OutputFile="..\..\..\Debug\plugins\styles/metal.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
@@ -114,7 +115,7 @@
 			OutputDirectory="..\..\..\Release"
 			IntermediateDirectory="..\$(ConfigurationName)"
 			ConfigurationType="2"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
+			InheritedPropertySheets="$(SolutionDir)sim\win32\sim-default.vsprops"
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="false"
 			CharacterSet="2"
@@ -144,14 +145,13 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="2"
-				AdditionalIncludeDirectories="$(QTDIR)\include,..\..\..\sim"
-				PreprocessorDefinitions="NDEBUG;WIN32;_WINDOWS;_USRDLL;metal_EXPORTS;QT_DLL;UNICODE;QT_THREAD_SUPPORT"
+				AdditionalIncludeDirectories=""
+				PreprocessorDefinitions="_NDEBUG;NDEBUG"
 				StringPooling="true"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
-				DisableSpecificWarnings="4996"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -168,7 +168,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="$(QTDIR)\lib\$(QTLIB) $(QTDIR)\lib\qtmain.lib $(SolutionDir)$(ConfigurationName)\sim.lib imm32.lib wsock32.lib winmm.lib"
+				AdditionalDependencies="$(SolutionDir)$(ConfigurationName)\sim.lib"
 				OutputFile="../../../Release/plugins/styles/metal.dll"
 				SuppressStartupBanner="true"
 				ImportLibrary=".\..\Release_Wrk\plugins\style/metal.lib"
