make remote compilable in win32

--- a/branches/branch-QString/plugins/remote/simremote.vcproj
+++ b/branches/branch-QString/plugins/remote/simremote.vcproj
@@ -316,6 +316,10 @@
 			Filter="h;hpp;hxx;hm;inl"
 			>
 			<File
+				RelativePath=".\resource.h"
+				>
+			</File>
+			<File
 				RelativePath="SimControl.h"
 				>
 			</File>
