I had to change those makefiles to get it compile with unsermake... any ideas what is wrong?

--- a/branches/branch-QString/plugins/_core/smiles/Makefile.am
+++ b/branches/branch-QString/plugins/_core/smiles/Makefile.am
@@ -4,5 +4,5 @@ iconsdir = $(kde_datadir)/sim/icons/
 all: smiles.jisp
 
 smiles.jisp: $(srcdir)/icondef.xml $(srcdir)/*.png
-	$(ZIP) $(ZIP_FLAGS) $@ $^
+	$(ZIP) $(ZIP_FLAGS) $@ $(srcdir)/icondef.xml $(srcdir)/*.png
 
