--- a/branches/branch-QString/plugins/background/Makefile.am
+++ b/branches/branch-QString/plugins/background/Makefile.am
@@ -9,7 +9,7 @@ INCLUDES=-I$(srcdir)/../../sim $(all_includes)
 
 background_la_METASOURCES = AUTO
 background_la_LIBADD = ../../sim/libsim.la  $(LIBUI) $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
-background_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+background_la_LDFLAGS = -module -no-undefined -avoid-version $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 
 
