--- a/branches/branch-QString/plugins/weather/jisp/Makefile.am
+++ b/branches/branch-QString/plugins/weather/jisp/Makefile.am
@@ -5,4 +5,4 @@ iconsdir = $(kde_datadir)/sim/icons/
 all: weather.jisp
 
 weather.jisp: $(srcdir)/icondef.xml $(srcdir)/*.png
-	$(ZIP) $(ZIP_FLAGS) $@ $^
+	$(ZIP) $(ZIP_FLAGS) $@ $(srcdir)/icondef.xml $(srcdir)/*.png
