--- a/branches/branch-QString/plugins/_core/icqlite/Makefile.am
+++ b/branches/branch-QString/plugins/_core/icqlite/Makefile.am
@@ -5,4 +5,4 @@ iconsdir=$(kde_datadir)/sim/icons/
 all: icqlite.jisp
 
 icqlite.jisp: $(srcdir)/icondef.xml $(srcdir)/*.png
-	$(ZIP) $(ZIP_FLAGS) $@ $^
+	$(ZIP) $(ZIP_FLAGS) $@ $(srcdir)/icondef.xml $(srcdir)/*.png
