--- a/branches/branch-QString/plugins/_core/jisp/Makefile.am
+++ b/branches/branch-QString/plugins/_core/jisp/Makefile.am
@@ -1,4 +1,4 @@
-EXTRA_DIST=icondef.xml 
+EXTRA_DIST=icondef.xml
 
 nodist_icons_DATA = sim.jisp
 iconsdir= $(kde_datadir)/sim/icons
@@ -6,6 +6,6 @@ iconsdir= $(kde_datadir)/sim/icons
 all: sim.jisp
 
 sim.jisp: $(srcdir)/icondef.xml $(srcdir)/*.png
-	$(ZIP) $(ZIP_FLAGS) $@ $^
-dist-hook: 	
+	$(ZIP) $(ZIP_FLAGS) $@ $(srcdir)/icondef.xml $(srcdir)/*.png
+dist-hook:
 	cp $(srcdir)/*.png $(distdir)
