--- a/branches/branch-QString/plugins/about/Makefile.am
+++ b/branches/branch-QString/plugins/about/Makefile.am
@@ -9,7 +9,7 @@ INCLUDES=-I$(srcdir)/../../sim $(all_includes)
 
 about_la_METASOURCES = AUTO
 about_la_LIBADD = ../../sim/libsim.la  $(LIBUI) $(LIB_QT) $(LIB_KDECORE) $(LIB_KDEUI) $(EXTRA_LIBS)
-about_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+about_la_LDFLAGS = -module -no-undefined -avoid-version $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 
 
