--- a/branches/branch-QString/plugins/gpg/Makefile.am
+++ b/branches/branch-QString/plugins/gpg/Makefile.am
@@ -22,7 +22,7 @@ INCLUDES=-I$(srcdir)/../../sim -I../_core -I$(srcdir)/../_core $(all_includes)
 gpg_la_METASOURCES = AUTO
 gpg_la_LIBADD =  $(GPG_OBJ) ../../sim/libsim.la  $(LIBUI) $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
 gpg_la_DEPENDENCIES =  $(GPG_OBJ)
-gpg_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+gpg_la_LDFLAGS = -module -no-undefined -avoid-version $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 
 
