--- a/branches/branch-QString/plugins/livejournal/Makefile.am
+++ b/branches/branch-QString/plugins/livejournal/Makefile.am
@@ -9,13 +9,13 @@ livejournal_la_SOURCES = \
  msgjournal.cpp \
  msgjournalbase.ui \
  journalsearch.cpp \
- journalsearchbase.ui 
+ journalsearchbase.ui
 
 INCLUDES=-I$(srcdir)/../../sim -I../_core -I$(srcdir)/../_core $(all_includes)
 
 livejournal_la_METASOURCES = AUTO
 livejournal_la_LIBADD = ../../sim/libsim.la  $(LIBUI) $(LIB_KDECORE) $(LIB_KDEUI) $(LIB_KFILE) $(LIB_QT) $(LIBSSL) $(EXTRA_LIBS)
-livejournal_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+livejournal_la_LDFLAGS = -module -no-undefined -avoid-version $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 
 
