--- a/branches/branch-QString/plugins/logger/Makefile.am
+++ b/branches/branch-QString/plugins/logger/Makefile.am
@@ -9,6 +9,6 @@ INCLUDES=-I$(srcdir)/../../sim $(all_includes)
 
 logger_la_METASOURCES = AUTO
 logger_la_LIBADD = ../../sim/libsim.la   $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
-logger_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+logger_la_LDFLAGS = -module -no-undefined -avoid-version $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 
