--- a/branches/branch-QString/plugins/netmonitor/Makefile.am
+++ b/branches/branch-QString/plugins/netmonitor/Makefile.am
@@ -8,7 +8,7 @@ INCLUDES=-I$(srcdir)/../../sim $(all_includes)
 
 netmonitor_la_METASOURCES = AUTO
 netmonitor_la_LIBADD = ../../sim/libsim.la  $(LIBUI) $(LIB_KDECORE) $(LIB_KDEUI) $(LIB_KFILE) $(LIB_QT) $(EXTRA_LIBS)
-netmonitor_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+netmonitor_la_LDFLAGS = -module -no-undefined -avoid-version $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 
 
