--- a/branches/branch-QString/plugins/ontop/Makefile.am
+++ b/branches/branch-QString/plugins/ontop/Makefile.am
@@ -11,7 +11,7 @@ INCLUDES=-I$(srcdir)/../../sim $(all_includes)
 
 ontop_la_METASOURCES = AUTO
 ontop_la_LIBADD = ../../sim/libsim.la  $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
-ontop_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+ontop_la_LDFLAGS = -module -no-undefined -avoid-version $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 
 
