--- a/branches/branch-QString/plugins/sound/Makefile.am
+++ b/branches/branch-QString/plugins/sound/Makefile.am
@@ -12,7 +12,7 @@ SUBDIRS=sounds
 
 sound_la_METASOURCES = AUTO
 sound_la_LIBADD = ../../sim/libsim.la  $(LIBUI) $(LIB_KDECORE) $(LIB_QT) $(EXTRA_LIBS)
-sound_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+sound_la_LDFLAGS = -module -no-undefined -avoid-version $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 
 
