--- a/branches/branch-QString/plugins/styles/Makefile.am
+++ b/branches/branch-QString/plugins/styles/Makefile.am
@@ -12,8 +12,8 @@ SUBDIRS = wood metal
 INCLUDES=-I$(srcdir)/../../sim $(all_includes)
 
 styles_la_METASOURCES = AUTO
-styles_la_LIBADD = ../../sim/libsim.la   $(LIB_QT) $(LIB_KDECORE) $(LIB_KDEUI) $(EXTRA_LIBS) 
-styles_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+styles_la_LIBADD = ../../sim/libsim.la   $(LIB_QT) $(LIB_KDECORE) $(LIB_KDEUI) $(EXTRA_LIBS)
+styles_la_LDFLAGS = -module -no-undefined -avoid-version $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 
 
