vcproj: don't treat warnings as errors jabber: small fix remote: fix compile with msvc8 - but could not test it

--- a/branches/branch-QString/plugins/remote/simctrl.vcproj
+++ b/branches/branch-QString/plugins/remote/simctrl.vcproj
@@ -46,13 +46,12 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories=""
-				PreprocessorDefinitions="_DEBUG;DEBUG"
+				PreprocessorDefinitions="_DEBUG;DEBUG;_ATL_DISABLE_DEPRECATED"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				BrowseInformation="1"
 				WarningLevel="4"
-				WarnAsError="true"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
 			/>
