added missing moon icons to win32 project

--- a/branches/branch-QString/plugins/weather/weather.vcproj
+++ b/branches/branch-QString/plugins/weather/weather.vcproj
@@ -815,6 +815,126 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\jisp\m0.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m1.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m10.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m11.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m12.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m13.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m14.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m15.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m16.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m17.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m18.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m19.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m2.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m20.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m21.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m22.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m23.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m24.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m25.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m26.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m27.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m28.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m29.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m3.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m4.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m5.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m6.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m7.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m8.png"
+				>
+			</File>
+			<File
+				RelativePath=".\jisp\m9.png"
+				>
+			</File>
+			<File
 				RelativePath="jisp\na.png"
 				>
 			</File>
